# NLITP-Public

./: .gitignore  COPYRIGHT.md  README.md
cpp/: .gitignore  AGENT_NODE_IMPLEMENTATION_STATUS.md  CMakeLists.txt  INSTALLATION_REQUIREMENTS.md  README.md  build.sh
cpp/docs/: AGENT_NODE.md
cpp/examples/: agent_example.cpp  agent_node_example.cpp  mesh_demo.cpp
cpp/include/nlitp/: agent_crypto.hpp  agent_discovery.hpp  agent_identity.hpp  agent_node.hpp  decentralized_messenger.hpp  message_types.hpp  port_allocator.hpp  rate_limiter.hpp  replay_protection.hpp  security_config.hpp  trust_ledger.hpp  utilities.hpp
cpp/src/: agent_crypto.cpp  agent_discovery.cpp  agent_identity.cpp  agent_node.cpp  decentralized_messenger.cpp  message_types.cpp  port_allocator.cpp  rate_limiter.cpp  replay_protection.cpp  security_config.cpp  trust_ledger.cpp  utilities.cpp
cpp/tests/: CMakeLists.txt  test_agent_crypto.cpp  test_agent_identity.cpp  test_message_types.cpp  test_port_allocator.cpp  test_rate_limiter.cpp  test_replay_protection.cpp  test_security_config.cpp  test_trust_ledger.cpp
docs/: WISDOM.md
swift/: Package.swift  README.md
swift/Sources/NLITP/: NLITPv8.swift
